--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -26,7 +26,11 @@ body { font-family:'opensans', helvetica, verdana, arial, sans-serif; margin:0; 
 .half {width:50%; max-width:600px;}
 .unpadded {padding:0px !important;}
 .unfloat {clear:both;}
+.hidden {display:none;}
 .input {border-radius:3px; border:1px solid #AAAAAA; padding:0.25em 0.7em; margin:0px; font-size:1em; height:2em;}
+
+.button {border-radius:3px; padding:0.5em 1em; background:#00B2D9; color:#FFFFFF; cursor:pointer;}
+.button:hover {background:#0094B6;}
 /*ENDREGION*/
 
 /*REGION HEADER*/
@@ -42,7 +46,7 @@ body { font-family:'opensans', helvetica, verdana, arial, sans-serif; margin:0; 
 
 #nav {width:100%; background:none; color:#00B2D9; position:relative;}
 #nav .item {float:left; font-size:1em; padding:0.42em 1em; cursor:pointer;}
-#nav .item:hover, #nav .item.active {border-bottom:5px solid #00B2D9;}
+#nav .item:hover, #nav .item.active {border-bottom:3px solid #00B2D9;}
 
 #banner-container {width:100%; margin:auto; background:#CCCCCC; position:relative; z-index:90;}
 #banner-container img {width:100%; background:#333333; margin-bottom:-4px;}
@@ -58,14 +62,13 @@ body { font-family:'opensans', helvetica, verdana, arial, sans-serif; margin:0; 
 .showcase {width:100%; border-radius:7.5px; }
 .showcase .title {color:#00B2D9; border-bottom:3px solid #00B2D9; padding:0.5em; text-align:center; font-weight:bold;}
 
-.showcase .button {display:inline-block; border-radius:3px; padding:0.5em 1em; background:#00B2D9; color:#FFFFFF; margin:0.5em 0.2em; cursor:pointer;}
-.showcase .button:hover {background:#0094B6;}
-
 .showcase>.container {padding:0.5em 0px;}
 .showcase>.container .item {width:20%; text-align:center; display:inline-block; margin-right:-0.3em; padding:0.5em 0.5em; vertical-align:bottom;}
-.showcase>.container .item>.wrapper {border-radius:3px; padding:0.5em; box-shadow:0px 0px 5px #00B2D9; }
-.showcase>.container .item img {background:#777777; max-width:100%; border-radius:7.5px}
+.showcase>.container .item>.wrapper {border-radius:3px; border:0px solid #00B2D9;}
+.showcase>.container .item img {background:#777777; max-width:100%; border-radius:3px 3px 0px 0px;}
 .showcase>.container .item .name {font-weight:bold;}
+.showcase>.container .detail-btn {border-radius:0px 0px 0px 3px; width:50%; float:left;}
+.showcase>.container .order-btn {border-radius:0px 0px 3px 0px; width:50%; float:left;}
 
 .showcase .detail-container {z-index:9999999; background:rgba(0,0,0,0.8); width:100%; height:100%; position:fixed; top:0px; left:0px;}
 .showcase .detail-container .prev-btn {color:#FFFFFF; position:fixed; top:40%; height:10%; left:15%; font-weight:bolder; font-size:70px;}
@@ -75,23 +78,22 @@ body { font-family:'opensans', helvetica, verdana, arial, sans-serif; margin:0; 
 .showcase .detail .close-btn {display:inline-block; border-radius:5px; padding:0.5em 1em; background:#FF0000; color:#FFFFFF; margin:0.5em auto; cursor:pointer;}
 .showcase .detail .close-btn:hover {background:#330000;}
 
-.orderbox-container {background:#0094B6; padding:1em; display:none; text-align:center; }
+.orderbox-container {background:#F3F3F3; text-align:center; border-top:3px solid #00B2D9;}
+.orderbox-container .title {background:#00B2D9; padding:0.2em; font-size:0.85em; color:#FFFFFF; margin:auto; border-radius:0px 0px 3px 3px;}
 
-#orderbox {margin-bottom:1em;}
+#orderbox {padding:1em 0px;}
+#orderbox .order>.wrapper {border-radius:3px; border:1px solid #00B2D9;}
 #orderbox .order{position:relative; display:inline-block; margin-right:1em; margin-bottom:1em; width:15%;}
 #orderbox .order img, #orderbox .order input{ margin-bottom:0.5em; border-radius:5px; width:100%;}
 
 #orderbox .order .remove-btn {border-radius:50%; width:1.5em; height:1.5em; color:#FFFFFF; background:#FF0000; font-weight:bold; position:absolute; right:0px; top:0px; cursor:pointer;}
 #orderbox .order .remove-btn:hover {background:#330000}
 
-.orderbox-container .button { display:inline-block; padding:0.5em 1em; border-radius:5px; background:#FFFFFF; cursor:pointer;}
-.orderbox-container .button:hover {background:#DDDDDD;}
-
 #showcases-prod .filter .item {display:inline-block;}
 
 #footer {margin-top:1.5em;}
 
-#footer .content {background:#0094B6; color:#FFFFFF; text-align:center;}
+#footer .content {background:#00B2D9; color:#FFFFFF; text-align:center;}
 #footer .content .logo {padding:1.5em;}
 #footer .content .menu .group {display:inline-block; margin:0em 0.5em 1.5em; vertical-align: top;}
 #footer .content .menu .group .item {padding:0.3em; text-align:left; font-size:0.9em;}
